<resources>
    <string name="app_name">AppStore</string>

    <string name="activity_main_title">App store</string>
    <string name="activity_app_info_title">App information</string>

    <string name="my_apps">My apps</string>
    <string name="categories">Categories</string>
    <string name="home">Home</string>
    <string name="search_app">Search ...</string>
    <string name="all">All</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="password_confirm">Password confirm</string>
    <string name="name">Name</string>
    <string name="mobile">Mobile</string>
    <string name="ok">Ok</string>

    <!--download activity-->
    <string name="not_exist_any_download">Not exist any file for download...</string>
    <string name="download_status_prepared">prepared for download...</string>
    <string name="download_status_downloading">downloading...</string>
    <string name="download_status_downloaded">downloaded...</string>
    <string name="download_status_paused">paused...</string>
    <string name="download_status_unzipping">preparing...</string>
    <string name="empty_content"></string>

</resources>
